fixed chat overflow visual bug

--- a/clientside/ui/chat.css
+++ b/clientside/ui/chat.css
@@ -14,8 +14,9 @@ html, body {
 
 .logs {
 	flex: 100;
-	overflow: hidden;
+	overflow-y: scroll;
 	vertical-align: bottom;
+	max-height: 100%;
 }
 
 #log-container {
